--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "dotenv": "^16.0.1",
+    "mongoose": "^6.5.2",
     "nanoid": "^3.3.4"
   },
   "devDependencies": {
