--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hapi-restapi-notes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.js",
   "scripts": {
     "start": "nodemon ./src/main.js",
     "lint": "eslint ./"
