--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "start": "nodemon ./src/main.js",
     "lint": "eslint ./"
   },
-  "keywords": ["notes", "rest", "api", "restapi", "rest-api", "mongodb", "hapijs", "nodejs", "javascript"],
+  "keywords": [],
   "author": "Muhammad Naufal, mnaufal0999@gmail.com",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
     "dotenv": "^16.0.1",
-    "mongoose": "^6.5.2",
-    "nanoid": "^3.3.4"
+    "mongoose": "^6.5.2"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
